# whisper-rs

.github/workflows/: pr.yml
src/: whisper_params.rs  whisper_state.rs
sys/: Cargo.toml  build.rs  wrapper.h
