[package]
name = "whisper-rs-sys"
version = "0.10.0"
edition = "2021"
description = "Rust bindings for whisper.cpp (FFI bindings)"
license = "Unlicense"
documentation = "https://docs.rs/whisper-rs-sys"
repository = "https://github.com/tazz4843/whisper-rs"
links = "whisper"
include = [
    "whisper.cpp/bindings/javascript/package-tmpl.json",
    "whisper.cpp/bindings/CMakeLists.txt",
    "whisper.cpp/cmake",
    "whisper.cpp/coreml",
    "whisper.cpp/CMakeLists.txt",
    "whisper.cpp/ggml/src/*.cpp",
    "whisper.cpp/ggml/src/*.c",
    "whisper.cpp/ggml/src/*.h",
    "whisper.cpp/ggml/include/*.h",
    "whisper.cpp/src/*.cpp",
    "whisper.cpp/include/*.h",
    "whisper.cpp/LICENSE",
    "src/*.rs",
    "build.rs",
    "wrapper.h",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
coreml = []
cuda = []
hipblas = []
opencl = []
openblas = []
metal = []
force-debug = []

[build-dependencies]
cmake = "0.1"
bindgen = "0.69"
cfg-if = "1"
fs_extra = "1.3"
